<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadingEdge="none"
    android:scrollbars="none" >

    <LinearLayout
        android:id="@+id/help_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            style="@style/help_categoty_title_style"
            android:text="@string/help_categoty_congratulations" />

        <View style="@style/help_categoty_splite_style" >
        </View>

        <LinearLayout style="@style/help_category_content_item_style" >

            <ImageView
                style="@style/help_category_content_item_image_style"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/help_congratulations_details"
                style="@style/help_category_content_item_text_style"
                android:text="@string/help_categoty_congratulations_details" />
        </LinearLayout>

        <TextView
            style="@style/help_categoty_title_style"
            android:text="@string/help_categoty_function_title" />

        <View style="@style/help_categoty_splite_style" >
        </View>

        <LinearLayout style="@style/help_category_content_container_style" >

            <LinearLayout style="@style/help_category_content_item_style" >

                <ImageView
                    android:id="@+id/help_icon_sms"
                    style="@style/help_category_content_item_image_style"
                    android:src="@drawable/ic_menu_selectall_holo_light" />

                <LinearLayout style="@style/help_category_content_item_text_style" >

                    <TextView
                        style="@style/help_category_content_item_text_title_style"
                        android:text="@string/help_categoty_function_albums_title" />

                    <TextView
                        style="@style/help_category_content_item_text_details_style"
                        android:text="@string/help_categoty_function_albums_details" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/help_category_content_item_splite_style" >
            </View>

            <LinearLayout style="@style/help_category_content_item_style" >

                <ImageView
                    android:id="@+id/help_icon_call"
                    style="@style/help_category_content_item_image_style"
                    android:src="@drawable/ic_menu_mapmode" />

                <LinearLayout style="@style/help_category_content_item_text_style" >

                    <TextView
                        style="@style/help_category_content_item_text_title_style"
                        android:text="@string/help_categoty_function_pictures_title" />

                    <TextView
                        style="@style/help_category_content_item_text_details_style"
                        android:text="@string/help_categoty_function_pictures_details" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/help_category_content_item_splite_style" >
            </View>

            <LinearLayout style="@style/help_category_content_item_style" >

                <ImageView
                    android:id="@+id/help_icon_explorer"
                    style="@style/help_category_content_item_image_style"
                    android:src="@drawable/ic_menu_share" />

                <LinearLayout style="@style/help_category_content_item_text_style" >

                    <TextView
                        style="@style/help_category_content_item_text_title_style"
                        android:text="@string/help_categoty_function_sahre_title" />

                    <TextView
                        style="@style/help_category_content_item_text_details_style"
                        android:text="@string/help_categoty_function_share_details" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/help_category_content_item_splite_style" >
            </View>

            <LinearLayout style="@style/help_category_content_item_style" >

                <ImageView
                    style="@style/help_category_content_item_image_style"
                    android:src="@drawable/ic_menu_start_conversation" />

                <LinearLayout style="@style/help_category_content_item_text_style" >

                    <TextView
                        style="@style/help_category_content_item_text_title_style"
                        android:text="@string/help_categoty_function_tell_others_title" />

                    <TextView
                        style="@style/help_category_content_item_text_details_style"
                        android:text="@string/help_categoty_function_tell_others_details" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/help_categoty_title_style"
            android:text="@string/help_categoty_about_title" />

        <View style="@style/help_categoty_splite_style" >
        </View>

        <LinearLayout
            style="@style/help_category_content_container_style"
            android:layout_marginTop="12dip" >

            <TextView
                android:id="@+id/about_appName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/about_appVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/about_appVersion" />
            <!--
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/about_copyright" />
            -->

            <TextView
                android:id="@+id/about_thanks"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:gravity="center_horizontal"
                android:text="@string/about_thanks" />

            <TextView
                android:id="@+id/about_copyright_ch"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:gravity="center_horizontal"
                android:text="@string/about_copyright_ch" />

            <TextView
                android:id="@+id/about_copyright_en"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dip"
                android:gravity="center_horizontal"
                android:text="@string/about_copyright_en" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>